// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useValidatedBody > doesn't throw 400 Bad Request if body does not match validation schema 1`] = `
{
  "error": {
    "issues": [
      {
        "code": "invalid_type",
        "expected": "boolean",
        "message": "Required",
        "path": [
          "required",
        ],
        "received": "undefined",
      },
    ],
    "name": "ZodError",
  },
  "success": false,
}
`;

exports[`useValidatedBody > returns 200 OK if body matches validation schema 1`] = `
{
  "required": true,
}
`;

exports[`useValidatedBody > throws 400 Bad Request if body does not match validation schema 1`] = `
{
  "data": {
    "issues": [
      {
        "code": "invalid_type",
        "expected": "boolean",
        "message": "Required",
        "path": [
          "required",
        ],
        "received": "undefined",
      },
    ],
    "name": "ZodError",
  },
  "stack": [],
  "statusCode": 400,
  "statusMessage": "Bad Request",
}
`;
